Add a bunch of stuff(TM)

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,8 +50,8 @@ decoration {
 animations {
     enabled=1
     animation=windows,1,5,default
-    animation=borders,1,5,default
-    animation=fadein,1,3,default
+    animation=border,1,5,default
+    animation=fade,1,3,default
     animation=workspaces,1,4,default
 }
 
@@ -113,8 +113,9 @@ bind=ALT,0,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 0
 
 windowrule=float,title:''
 
-exec-once=mpvpaper -vs -o "no-audio loop" HDMI-A-1 /home/victoneux/.config/hypr/wallpaper.mp4
-exec-once=mpvpaper -vs -o "no-audio loop" DP-3 /home/victoneux/.config/hypr/wallpaper.mp4
+pkill mpvpaper
+exec=mpvpaper -vs -o "no-audio loop" HDMI-A-1 /home/victoneux/.config/hypr/wallpaper.mp4
+exec=mpvpaper -vs -o "no-audio loop" DP-3 /home/victoneux/.config/hypr/wallpaper.mp4
 #exec-once=eww daemon
 #exec-once=eww open bar
 #exec-once=eww open bar2
