--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,8 +28,8 @@ general {
     gaps_in=5
     gaps_out=10
     border_size=2
-    col.active_border=0xFF89dceb
-    col.inactive_border=0xFF181825
+    col.active_border=0xFFbabbf1
+    col.inactive_border=0xFF737994
 
     apply_sens_to_raw=0
 
@@ -37,7 +37,7 @@ general {
 }
 
 decoration {
-    rounding=0
+    rounding=10
     blur=0
     blur_size=1 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
@@ -79,15 +79,18 @@ bind=SUPER,f,fullscreen,0
 bind=SUPERSHIFT,f,fullscreen,1
 bind=SUPERSHIFT,Q,forcerendererreload
 bind=SUPERSHIFT,E,exit
-bind=SUPER,L,exec,swaylock --image ~/.config/hypr/wallpaper.png
+bind=SUPER,L,exec,~/.config/scripts/mylock.sh
 
-bind=,Print,exec,/home/victoneux/.config/scripts/capture_full.sh
+bind=,Print,exec,/home/victoneux/.config/scripts/hyprland_capture_full.sh
 bind=SUPER,Print,exec,/home/victoneux/.config/scripts/capture_region_wayland.sh
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
+
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
 
 bind=SUPER,1,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 1
 bind=SUPER,2,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 2
@@ -113,11 +116,10 @@ bind=ALT,0,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 0
 
 windowrule=float,title:''
 
-pkill mpvpaper
-exec=mpvpaper -vs -o "no-audio loop" HDMI-A-1 /home/victoneux/.config/hypr/wallpaper.mp4
-exec=mpvpaper -vs -o "no-audio loop" DP-3 /home/victoneux/.config/hypr/wallpaper.mp4
+exec-once=swaybg -i ~/.config/hypr/wallpaper.png
 #exec-once=eww daemon
 #exec-once=eww open bar
 #exec-once=eww open bar2
 exec-once=/home/victoneux/.config/scripts/hyprland_mon_socket.sh
-exec-once=gsettings set org.gnome.desktop.interface gtk-theme "Catppuccin-red"
+exec-once=gsettings set org.gnome.desktop.interface gtk-theme "cat-frappe-red"
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
