Add keybinds for muting/unmuting, change script stuff

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -89,6 +89,11 @@ bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
 
+bind=,F1,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
+bindr=,F1,exec,pactl set-source-mute @DEFAULT_SOURCE@ 1
+bind=SUPER,M,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
+
+
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
