--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,11 +4,10 @@
 # Refer to the wiki for more information.
 # owo
 
-monitor=DP-3,1920x1080@60,1920x0,1
-monitor=HDMI-A-1,1920x1080@60,0x0,1
 
-workspace=HDMI-A-1,21
-workspace=DP-3,11
+## CUSTOM SETUP - CHANGE PER SYSTEM!
+monitor=DP-3,preferred,1920x0,1
+monitor=HDMI-A-1,preferred,0x0,1
 
 input {
     kb_layout=
@@ -21,29 +20,28 @@ input {
 }
 
 general {
-    max_fps=60 # deprecated, unused
-    sensitivity=1.00
-    main_mod=SUPER
+    sensitivity=0.5
 
     gaps_in=5
     gaps_out=10
-    border_size=2
-    col.active_border=0xFFbabbf1
-    col.inactive_border=0xFF737994
+    border_size=3
+    col.active_border=0xFF89b4fa 0xFFf5e0dc 70deg
+    col.inactive_border=0xFFf5e0dc 0xFF89b4fa 20deg
 
     apply_sens_to_raw=0
-
-    damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
 }
 
 decoration {
-    rounding=10
+    rounding=15
+    multisample_edges=true
     blur=0
     blur_size=1 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
+    drop_shadow=true
+    shadow_range=8
     
 }
 
@@ -72,17 +70,18 @@ dwindle {
 bind=SUPER,RETURN,exec,kitty
 bind=SUPER,X,killactive,
 bind=SUPER,V,togglefloating,
-bind=SUPER,R,exec,rofi -theme applauncher.rasi -modi drun -show drun
+bind=SUPER,R,exec,/home/victoneux/.config/scripts/app_select.sh
 bind=SUPER,B,exec,firefox
-bind=SUPER,d,exec,discord
+bind=SUPER,d,exec,webcord-git
 bind=SUPER,f,fullscreen,0
 bind=SUPERSHIFT,f,fullscreen,1
 bind=SUPERSHIFT,Q,forcerendererreload
 bind=SUPERSHIFT,E,exit
-bind=SUPER,L,exec,~/.config/scripts/mylock.sh
+bind=SUPER,W,exec,~/.config/scripts/wallpaper/wallpaper_select.sh
+bind=SUPER,L,exec,~/.config/scripts/lock.sh
 
 bind=,Print,exec,/home/victoneux/.config/scripts/hyprland_capture_full.sh
-bind=SUPER,Print,exec,/home/victoneux/.config/scripts/capture_region_wayland.sh
+bind=SUPER,Print,exec,/home/victoneux/.config/scripts/hyprland_capture_partial.sh
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
@@ -121,10 +120,11 @@ bind=ALT,0,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 0
 
 windowrule=float,title:''
 
-exec-once=swaybg -i ~/.config/hypr/wallpaper.png
-#exec-once=eww daemon
-#exec-once=eww open bar
-#exec-once=eww open bar2
-exec-once=/home/victoneux/.config/scripts/hyprland_mon_socket.sh
-exec-once=gsettings set org.gnome.desktop.interface gtk-theme "cat-frappe-red"
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=/home/victoneux/.config/scripts/lock.sh
+exec-once=nm-applet &
+exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once=/home/victoneux/.config/scripts/multimon/init.sh
+exec-once=/home/victoneux/.config/scripts/hyprland_mon_socket.sh
+exec-once=nm-applet &
+exec-once=swww img $(cat /home/victoneux/.config/hypr/wpsave.txt)
