--- a/eww/eww.yuck.template
+++ b/eww/eww.yuck.template
@@ -1,21 +1,49 @@
 (defwidget time []
     (box
         :orientation "h"
-        :class "time"
-        :halign "end"
-        :overflow "hidden"
+        :class "text_widget"
         time_poll
     )
 )
-(defpoll time_poll :interval "1s" "date '+%I:%M %p'")
+(defpoll time_poll :interval "1s" "echo 󱑒 $(date '+%I:%M %p')")
+
+(defwidget network []
+    (box
+        :orientation "h"
+        :class "text_widget"
+        network_poll
+    )
+)
+(defpoll network_poll :interval "1s" "echo 󰓤 $(nmcli -t -f NAME con show --active | head -n 1)")
+
+(defwidget left []
+    (box
+        :orientation "h"
+        :class "left"
+        :halign "start"
+        :spacing 10
+        :space-evenly false
+        (network)
+    )
+)
+
+(defwidget right []
+    (box
+        :orientation "h"
+        :class "right"
+        :halign "end"
+        :spacing 10
+        :space-evenly false
+        (time)
+    )
+)
 
 (defwidget bar []
     (box
         :orientation "h"
-        :vexpand "false"
-        :hexpand "false"
         :class "bar"
-        (time)
+        (left)
+        (right)
     )
 )
 
