--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -124,6 +124,9 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once=/home/victoneux/.config/scripts/lock.sh
 exec-once=nm-applet &
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once=/home/victoneux/.config/scripts/multimon/init.sh
+exec-once=/home/victoneux/.config/scripts/init_scripts/init.sh
 exec-once=/home/victoneux/.config/scripts/hyprland_mon_socket.sh
 exec-once=nm-applet &
+
+env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
+env = MOZ_ENABLE_WAYLAND,1
