Bunch of changes for laptop TM

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,11 +4,6 @@
 # Refer to the wiki for more information.
 # owo
 
-
-## CUSTOM SETUP - CHANGE PER SYSTEM!
-monitor=DP-3,preferred,1920x0,1
-monitor=HDMI-A-1,preferred,0x0,1
-
 input {
     kb_layout=
     kb_variant=
@@ -130,3 +125,9 @@ exec-once=nm-applet &
 
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-dark
 env = MOZ_ENABLE_WAYLAND,1
+
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+#env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
