Init per-instance files in init.sh, add gitignore

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -132,3 +132,5 @@ env = XDG_SESSION_TYPE,wayland
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORM=wayland;xcb
+
+source = ~/.config/hypr/multimon.conf
