Add power menu (SUP+Z), and add gradient borders to all rofi menus

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -65,7 +65,8 @@ dwindle {
 bind=SUPER,RETURN,exec,kitty
 bind=SUPER,X,killactive,
 bind=SUPER,V,togglefloating,
-bind=SUPER,R,exec,/home/victoneux/.config/scripts/app_select.sh
+bind=SUPER,R,exec,~/.config/scripts/app_select.sh
+bind=SUPER,Z,exec,~/.config/scripts/power_select.sh
 bind=SUPER,B,exec,firefox
 bind=SUPER,d,exec,webcord-git
 bind=SUPER,f,fullscreen,0
@@ -75,8 +76,8 @@ bind=SUPERSHIFT,E,exit
 bind=SUPER,W,exec,~/.config/scripts/wallpaper/wallpaper_select.sh
 bind=SUPER,L,exec,~/.config/scripts/lock.sh
 
-bind=,Print,exec,/home/victoneux/.config/scripts/hyprland_capture_full.sh
-bind=SUPER,Print,exec,/home/victoneux/.config/scripts/hyprland_capture_partial.sh
+bind=,Print,exec,~/.config/scripts/hyprland_capture_full.sh
+bind=SUPER,Print,exec,~/.config/scripts/hyprland_capture_partial.sh
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
@@ -91,36 +92,36 @@ bind=SUPER,M,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
-bind=SUPER,1,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 1
-bind=SUPER,2,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 2
-bind=SUPER,3,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 3
-bind=SUPER,4,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 4
-bind=SUPER,5,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 5
-bind=SUPER,6,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 6
-bind=SUPER,7,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 7
-bind=SUPER,8,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 8
-bind=SUPER,9,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 9
-bind=SUPER,0,exec,/home/victoneux/.config/scripts/set_hyprland_workspace.sh 0
+bind=SUPER,1,exec,~/.config/scripts/set_hyprland_workspace.sh 1
+bind=SUPER,2,exec,~/.config/scripts/set_hyprland_workspace.sh 2
+bind=SUPER,3,exec,~/.config/scripts/set_hyprland_workspace.sh 3
+bind=SUPER,4,exec,~/.config/scripts/set_hyprland_workspace.sh 4
+bind=SUPER,5,exec,~/.config/scripts/set_hyprland_workspace.sh 5
+bind=SUPER,6,exec,~/.config/scripts/set_hyprland_workspace.sh 6
+bind=SUPER,7,exec,~/.config/scripts/set_hyprland_workspace.sh 7
+bind=SUPER,8,exec,~/.config/scripts/set_hyprland_workspace.sh 8
+bind=SUPER,9,exec,~/.config/scripts/set_hyprland_workspace.sh 9
+bind=SUPER,0,exec,~/.config/scripts/set_hyprland_workspace.sh 0
 
-bind=ALT,1,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 1
-bind=ALT,2,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 2
-bind=ALT,3,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 3
-bind=ALT,4,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 4
-bind=ALT,5,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 5
-bind=ALT,6,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 6
-bind=ALT,7,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 7
-bind=ALT,8,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 8
-bind=ALT,9,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 9
-bind=ALT,0,exec,/home/victoneux/.config/scripts/move_hyprland_workspace.sh 0
+bind=ALT,1,exec,~/.config/scripts/move_hyprland_workspace.sh 1
+bind=ALT,2,exec,~/.config/scripts/move_hyprland_workspace.sh 2
+bind=ALT,3,exec,~/.config/scripts/move_hyprland_workspace.sh 3
+bind=ALT,4,exec,~/.config/scripts/move_hyprland_workspace.sh 4
+bind=ALT,5,exec,~/.config/scripts/move_hyprland_workspace.sh 5
+bind=ALT,6,exec,~/.config/scripts/move_hyprland_workspace.sh 6
+bind=ALT,7,exec,~/.config/scripts/move_hyprland_workspace.sh 7
+bind=ALT,8,exec,~/.config/scripts/move_hyprland_workspace.sh 8
+bind=ALT,9,exec,~/.config/scripts/move_hyprland_workspace.sh 9
+bind=ALT,0,exec,~/.config/scripts/move_hyprland_workspace.sh 0
 
 windowrule=float,title:''
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=/home/victoneux/.config/scripts/lock.sh
+exec-once=~/.config/scripts/lock.sh
 exec-once=nm-applet &
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once=/home/victoneux/.config/scripts/init_scripts/init.sh
-exec-once=/home/victoneux/.config/scripts/hyprland_mon_socket.sh
+exec-once=~/.config/scripts/init_scripts/init.sh
+exec-once=~/.config/scripts/hyprland_mon_socket.sh
 exec-once=nm-applet &
 
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-dark
