Update player listener freq, add key controls to skip songs

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -75,6 +75,8 @@ bind=SUPERSHIFT,Q,forcerendererreload
 bind=SUPERSHIFT,E,exit
 bind=SUPER,W,exec,~/.config/scripts/wallpaper/wallpaper_select.sh
 bind=SUPER,L,exec,~/.config/scripts/lock.sh
+bind=SUPER,code:60,exec,playerctl next
+bind=SUPER,code:59,exec,playerctl previous
 
 bind=,Print,exec,~/.config/scripts/hyprland_capture_full.sh
 bind=SUPER,Print,exec,~/.config/scripts/hyprland_capture_partial.sh
