Add play-pause toggle, update gitignore

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -77,7 +77,7 @@ bind=SUPER,W,exec,~/.config/scripts/wallpaper/wallpaper_select.sh
 bind=SUPER,L,exec,~/.config/scripts/lock.sh
 bind=SUPER,code:60,exec,playerctl next
 bind=SUPER,code:59,exec,playerctl previous
-
+bind=SUPER,space,exec,playerctl play-pause
 bind=,Print,exec,~/.config/scripts/hyprland_capture_full.sh
 bind=SUPER,Print,exec,~/.config/scripts/hyprland_capture_partial.sh
 
