--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -51,6 +51,10 @@ dwindle {
     pseudotile=0 # enable pseudotiling on dwindle
 }
 
+xwayland {
+    force_zero_scaling = true
+}
+
 # example window rules
 # for windows named/classed as abc and xyz
 #windowrule=move 69 420,abc
