switch to using different webcord vers

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -71,7 +71,7 @@ bind=SUPER,V,togglefloating,
 bind=SUPER,R,exec,~/.config/scripts/app_select.sh
 bind=SUPER,Z,exec,~/.config/scripts/power_select.sh
 bind=SUPER,B,exec,firefox
-bind=SUPER,d,exec,webcord-git
+bind=SUPER,d,exec,webcord
 bind=SUPER,f,fullscreen,0
 bind=SUPERSHIFT,f,fullscreen,1
 bind=SUPERSHIFT,Q,forcerendererreload
