volume control, new push to talk

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -89,10 +89,13 @@ bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
 
-bind=,F1,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
-bindr=,F1,exec,pactl set-source-mute @DEFAULT_SOURCE@ 1
+bind=,F4,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
+bindr=,F4,exec,pactl set-source-mute @DEFAULT_SOURCE@ 1
 bind=SUPER,M,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
 
+bind=,F1,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind=,F2,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind=,F3,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
 
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
