--- a/eww/eww.yuck.template
+++ b/eww/eww.yuck.template
@@ -1,6 +1,7 @@
+(defvar show_player false)
+
 (defwidget time []
     (box
-        :orientation "h"
         :class "text_widget"
         time_poll
     )
@@ -9,7 +10,6 @@
 
 (defwidget network []
     (box
-        :orientation "h"
         :class "text_widget"
         network_poll
     )
@@ -18,20 +18,26 @@
 
 (defwidget player []
     (box
-        :orientation "h"
+        :visible show_player
         :class "text_widget"
         player_poll
     )
 )
+(defpoll player_poll :interval ".2s" "echo $(~/.config/scripts/polls/audiopoll.sh)")
 
-(defpoll player_poll :interval ".1s" "echo $(~/.config/scripts/audiopoll.sh)")
+(defwidget volume []
+    (box
+        :class "text_widget"
+        volume_poll
+    )
+)
+(defpoll volume_poll :interval ".2s" "echo $(~/.config/scripts/polls/volumepoll.sh)")
 
 (defwidget battery []
     (box
-        :orientation "h"
         :class "text_widget"
         battery_poll
     )
 )
 
-(defpoll battery_poll :interval "1s" "echo $(~/.config/scripts/batterypoll.sh)")
+(defpoll battery_poll :interval "1s" "echo $(~/.config/scripts/polls/batterypoll.sh)")
