change per-device config file name

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -142,4 +142,4 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORM=wayland;xcb
 
-source = ~/.config/hypr/multimon.conf
+source = ~/.config/hypr/perdevice.conf
