add calendar icon

--- a/eww/eww.yuck.template
+++ b/eww/eww.yuck.template
@@ -14,7 +14,7 @@
         date_poll
     )
 )
-(defpoll date_poll :interval "1s" "echo $(date +'%h %d')")
+(defpoll date_poll :interval "1s" "echo  $(date +'%h %d')")
 
 (defwidget network []
     (box
