run nm-applet again cuz it fixes protonvpn

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -129,6 +129,7 @@ exec-once=~/.config/scripts/lock.sh
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=~/.config/scripts/init_scripts/init.sh
 exec-once=~/.config/scripts/hyprland_mon_socket.sh
+exec-once=nm-applet &
 
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-dark
 env = MOZ_ENABLE_WAYLAND,1
