--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -73,6 +73,7 @@ bind=SUPER,Z,exec,~/.config/scripts/power_select.sh
 bind=SUPER,B,exec,firefox
 bind=SUPER,d,exec,webcord
 bind=SUPER,f,fullscreen,0
+bind=SUPER,q,exec,~/.config/scripts/bar_toggle.sh
 bind=SUPERSHIFT,f,fullscreen,1
 bind=SUPERSHIFT,Q,forcerendererreload
 bind=SUPERSHIFT,E,exit
@@ -126,10 +127,11 @@ windowrule=float,title:''
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=~/.config/scripts/lock.sh
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once=kwalletd5
 exec-once=~/.config/scripts/init_scripts/init.sh
 exec-once=~/.config/scripts/hyprland_mon_socket.sh
 exec-once=nm-applet &
+exec-once=/usr/lib/kdeconnectd
 
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-dark
 env = MOZ_ENABLE_WAYLAND,1
