--- a/eww/eww.yuck.template
+++ b/eww/eww.yuck.template
@@ -28,10 +28,10 @@
     (box
         :visible show_player
         :class "text_widget"
-        player_poll
+        player_listener
     )
 )
-(defpoll player_poll :interval ".2s" "echo $(~/.config/scripts/polls/audiopoll.sh)")
+(deflisten player_listener :initial '' '~/.config/scripts/listeners/audiolisten.sh')
 
 (defwidget volume []
     (box
