specify spotify as player in keybinds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -79,9 +79,9 @@ bind=SUPERSHIFT,Q,forcerendererreload
 bind=SUPERSHIFT,E,exit
 bind=SUPER,W,exec,~/.config/scripts/wallpaper/wallpaper_select.sh
 bind=SUPER,L,exec,~/.config/scripts/lock.sh
-bind=SUPER,code:60,exec,playerctl next
-bind=SUPER,code:59,exec,playerctl previous
-bind=SUPER,space,exec,playerctl play-pause
+bind=SUPER,code:60,exec,playerctl --player spotify next
+bind=SUPER,code:59,exec,playerctl --player spotify previous
+bind=SUPER,space,exec,playerctl --player spotify play-pause
 bind=,Print,exec,~/.config/scripts/hyprland_capture_full.sh
 bind=SUPER,Print,exec,~/.config/scripts/hyprland_capture_partial.sh
 
