--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -135,10 +135,10 @@ exec-once=/usr/lib/kdeconnectd
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
 env = MOZ_ENABLE_WAYLAND,1
 
-#env = LIBVA_DRIVER_NAME,nvidia
+env = LIBVA_DRIVER_NAME,radeonsi
 env = XDG_SESSION_TYPE,wayland
 #env = GBM_BACKEND,nvidia-drm
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,radeonsi
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORM=wayland;xcb
 
