Auto lock after 5 min

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -131,6 +131,8 @@ exec-once=~/.config/scripts/init_scripts/init.sh
 exec-once=~/.config/scripts/hyprland_mon_socket.sh
 exec-once=nm-applet &
 exec-once=/usr/lib/kdeconnectd
+exec-once=swayidle -w 300 '~/.config/scripts/lock.sh'
+
 
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
 env = MOZ_ENABLE_WAYLAND,1
