--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -131,7 +131,7 @@ exec-once=~/.config/scripts/init_scripts/init.sh
 exec-once=~/.config/scripts/hyprland_mon_socket.sh
 exec-once=nm-applet &
 exec-once=/usr/lib/kdeconnectd
-exec-once=swayidle -w 300 '~/.config/scripts/lock.sh'
+exec-once=swayidle -w timeout 300 '~/.config/scripts/lock.sh'
 
 
 env = GTK_THEME,Catppuccin-Mocha-Standard-Sapphire-Dark
