--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,7 +20,7 @@ general {
     gaps_in=5
     gaps_out=10
     border_size=3
-    col.active_border=0xFF89b4fa 0xFFf5e0dc 70deg
+    col.active_border=0xFF89b4fa 0xFFf5e0dc 135deg
     col.inactive_border=0xFFf5e0dc 0xFF89b4fa 20deg
 
     apply_sens_to_raw=0
@@ -33,7 +33,7 @@ decoration {
 	size = 1
 	passes = 1
     }
-    drop_shadow=true
+    drop_shadow=false
     shadow_range=8
     
 }
@@ -127,7 +127,7 @@ windowrule=float,title:''
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=~/.config/scripts/lock.sh
 exec-once=kwalletd5
-exec-once=~/.config/scripts/init_scripts/init.sh
+exec-once=~/.config/scripts/init/main.sh
 exec-once=~/.config/scripts/hyprland_mon_socket.sh
 exec-once=nm-applet &
 exec-once=/usr/lib/kdeconnectd
@@ -137,7 +137,6 @@ env = MOZ_ENABLE_WAYLAND,1
 
 env = LIBVA_DRIVER_NAME,radeonsi
 env = XDG_SESSION_TYPE,wayland
-#env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,radeonsi
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORM=wayland;xcb
