--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -83,6 +83,7 @@ bind=SUPER,code:59,exec,playerctl --player spotify previous
 bind=SUPER,space,exec,playerctl --player spotify play-pause
 bind=,Print,exec,~/.config/scripts/hyprland_capture_full.sh
 bind=SUPER,Print,exec,~/.config/scripts/hyprland_capture_partial.sh
+bind=SUPER,P,pseudo,
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
@@ -139,6 +140,8 @@ env = LIBVA_DRIVER_NAME,radeonsi
 env = XDG_SESSION_TYPE,wayland
 env = __GLX_VENDOR_LIBRARY_NAME,radeonsi
 env = WLR_NO_HARDWARE_CURSORS,1
-env = QT_QPA_PLATFORM=wayland;xcb
+
+env = GDK_BACKEND,wayland,x11
+env = QT_QPA_PLATFORM,wayland;xcb
 
 source = ~/.config/hypr/perdevice.conf
