--- a/eww/eww.yuck.template
+++ b/eww/eww.yuck.template
@@ -29,7 +29,6 @@
     (box
         :visible show_player
         :class "text_widget music"
-        :width 700
         (label
             :text player_listener
             :limit-width 50
@@ -81,19 +80,19 @@
                     (button
                         :class "red"
                         :timeout "200ms"
-                        :onclick ""
+                        :onclick "eww update show_menu=false && ~/.config/scripts/app_select.sh"
                         "󰀻"
                     )
                     (button
                         :class "red"
                         :timeout "200ms"
-                        :onclick ""
+                        :onclick "eww update show_menu=false && ~/.config/scripts/wallpaper/wallpaper_select.sh"
                         "󰸉"
                     )
                     (button
                         :class "red"
                         :timeout "200ms"
-                        :onclick ""
+                        :onclick "eww update show_menu=false && ~/.config/scripts/power_select.sh"
                         "󰐥"
                     )
                 )
