--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -143,3 +143,6 @@ env = GDK_BACKEND,wayland,x11
 env = QT_QPA_PLATFORM,wayland;xcb
 
 source = ~/.config/hypr/perdevice.conf
+
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
