switch to amixer for volume control so it doesnt go above 100%

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -95,8 +95,8 @@ bindr=,F4,exec,pactl set-source-mute @DEFAULT_SOURCE@ 1
 bind=SUPER,M,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
 
 bind=,F1,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind=,F2,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind=,F3,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind=,F2,exec,amixer -q -D pulse sset Master 5%-
+bind=,F3,exec,amixer -q -D pulse sset Master 5%+
 
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
