switch to hyprlock

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -77,7 +77,7 @@ bind=SUPERSHIFT,f,fullscreen,1
 bind=SUPERSHIFT,Q,forcerendererreload
 bind=SUPERSHIFT,E,exit
 bind=SUPER,W,exec,~/.config/scripts/wallpaper/wallpaper_select.sh
-bind=SUPER,L,exec,~/.config/scripts/lock.sh
+bind=SUPER,L,exec,hyprlock
 bind=SUPER,code:60,exec,playerctl --player spotify next
 bind=SUPER,code:59,exec,playerctl --player spotify previous
 bind=SUPER,space,exec,playerctl --player spotify play-pause
