update hyprlock conf

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,12 +1,12 @@
 label {
   monitor = 
-  text = Hi there, $USER
-  color = rgba(17, 17, 27, 1.0)
+  text = cmd[update:60000] /home/$USER/.config/scripts/lock/message.sh
+  color = 0xFFf2cdcd
   font_size = 25
   font_family = Noto Sans
   font_weight = bold
 
-  position = 0 -400
+  position = 0 -450
   halign = center
   valign = center
 }
@@ -14,7 +14,7 @@ label {
 label {
   monitor = 
   text = <i>$TIME</i>
-  color = rgba(17, 17, 27, 1.0)
+  color = 0xFFf2cdcd
   font_size = 25
   font_family = Noto Sans
   font_weight = bold
@@ -28,9 +28,9 @@ input-field {
 	monitor =
 	size = 200,50
 	outline_thickness = 3
-	outer_color = 0xFF89b4fa 0xFFf5e0dc 135deg
-	inner_color = 0x11111b
-	font_color = rgba(205, 214, 244, 1.0)
+	outer_color = 0x00
+	inner_color = 0x00
+	font_color = 0xFFf2cdcd
 	fade_on_empty = false
 	hide_input = false
 	position = 0 -500
@@ -40,5 +40,5 @@ input-field {
 
 background {
 	monitor = 
-	path = /home/victoneux/.config/scripts/wallpaper/lock.png
+	path = /home/$USER/.config/scripts/lock/lock.png
 }
