--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,10 +40,10 @@ decoration {
 
 animations {
     enabled=1
-    animation=windows,1,5,default
-    animation=border,1,5,default
+    bezier=UWU1,0.22, 1, 0.36, 1
+    animation=windows,1,5,UWU1,slide
     animation=fade,1,3,default
-    animation=workspaces,1,4,default
+    animation=workspaces,1,4,UWU1,slidevert
 }
 
 dwindle {
