--- a/eww/eww.yuck.template
+++ b/eww/eww.yuck.template
@@ -40,63 +40,44 @@
 
 (defwidget volume []
     (box
-        :class "text_widget"
-        volume_poll
+        :class "extra_padding_left"
+        (overlay
+            :valign "center"
+            :halign "center"
+            (circular-progress
+                :value volume_poll
+                :vexpand "false"
+                :hexpand "false"
+                :thickness 3
+                :start-at 10
+                :class "circle_prog"
+                (box :width 25 :height 25)
+            )
+            (label :text "󰕾" :valign "center" :halign "center" :style "margin-top: 2px;")
+        )
     )
 )
 (defpoll volume_poll :interval ".2s" "echo $(~/.config/scripts/polls/volumepoll.sh)")
 
 (defwidget battery []
     (box
-        :class "text_widget"
-        battery_poll
-    )
-)
-
-(defpoll battery_poll :interval "1s" "echo $(~/.config/scripts/polls/batterypoll.sh)")
-
-(defwidget start []
-    (eventbox
-        :onhover "eww update show_menu=true"
-        :onhoverlost "eww update show_menu=false"
-        (box
-            :class "text_widget extra_padding_left"
-            :vexpand "false"
-            :hexpand "false"
-            :space-evenly "false"
-            (button
-                :class "red"
-                :timeout "200ms"
-                :onclick ""
-                ""
+        :class ""
+        (overlay
+            :valign "center"
+            :halign "center"
+            (circular-progress
+                :value battery_poll1
+                :vexpand "false"
+                :hexpand "false"
+                :thickness 3
+                :start-at 10
+                :class "circle_prog"
+                (box :width 25 :height 25)
             )
-            (revealer
-                :transition "slideright"
-                :reveal show_menu
-                :duration "500ms"
-                :class "text_widget"
-                (box
-                    :spacing 10
-                    (button
-                        :class "red"
-                        :timeout "200ms"
-                        :onclick "eww update show_menu=false && ~/.config/scripts/app_select.sh"
-                        "󰀻"
-                    )
-                    (button
-                        :class "red"
-                        :timeout "200ms"
-                        :onclick "eww update show_menu=false && ~/.config/scripts/wallpaper/wallpaper_select.sh"
-                        "󰸉"
-                    )
-                    (button
-                        :class "red"
-                        :timeout "200ms"
-                        :onclick "eww update show_menu=false && ~/.config/scripts/power_select.sh"
-                        "󰐥"
-                    )
-                )
-            )
+            (label :text battery_poll2 :valign "center" :halign "center" :style "margin-top: 2px;")
         )
     )
 )
+
+(defpoll battery_poll1 :interval "1s" "echo $(~/.config/scripts/polls/batterypoll1.sh)")
+(defpoll battery_poll2 :interval "1s" "echo $(~/.config/scripts/polls/batterypoll2.sh)")
